--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@types/react-redux": "^7.1.33",
     "@types/uuid": "^10.0.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
