--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@storybook/addon-interactions": "^8.2.8",
     "@storybook/addon-links": "^8.2.8",
     "@storybook/addon-onboarding": "^8.2.8",
+    "@storybook/addon-storysource": "^8.2.9",
     "@storybook/blocks": "^8.2.8",
     "@storybook/react": "^8.2.9",
     "@storybook/react-vite": "^8.2.9",
